test/libsolidity/syntaxTests/more_than_256_declarationerrors.sol
contract C {
  function f() public {
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
  }
}
// ----
// DeclarationError: (41-42): Undeclared identifier.
// DeclarationError: (52-53): Undeclared identifier.
// DeclarationError: (63-64): Undeclared identifier.
// DeclarationError: (74-75): Undeclared identifier.
// DeclarationError: (85-86): Undeclared identifier.
// DeclarationError: (96-97): Undeclared identifier.
// DeclarationError: (107-108): Undeclared identifier.
// DeclarationError: (118-119): Undeclared identifier.
// DeclarationError: (129-130): Undeclared identifier.
// DeclarationError: (140-141): Undeclared identifier.
// DeclarationError: (151-152): Undeclared identifier.
// DeclarationError: (162-163): Undeclared identifier.
// DeclarationError: (173-174): Undeclared identifier.
// DeclarationError: (184-185): Undeclared identifier.
// DeclarationError: (195-196): Undeclared identifier.
// DeclarationError: (206-207): Undeclared identifier.
// DeclarationError: (217-218): Undeclared identifier.
// DeclarationError: (228-229): Undeclared identifier.
// DeclarationError: (239-240): Undeclared identifier.
// DeclarationError: (250-251): Undeclared identifier.
// DeclarationError: (261-262): Undeclared identifier.
// DeclarationError: (272-273): Undeclared identifier.
// DeclarationError: (283-284): Undeclared identifier.
// DeclarationError: (294-295): Undeclared identifier.
// DeclarationError: (305-306): Undeclared identifier.
// DeclarationError: (316-317): Undeclared identifier.
// DeclarationError: (327-328): Undeclared identifier.
// DeclarationError: (338-339): Undeclared identifier.
// DeclarationError: (349-350): Undeclared identifier.
// DeclarationError: (360-361): Undeclared identifier.
// DeclarationError: (371-372): Undeclared identifier.
// DeclarationError: (382-383): Undeclared identifier.
// DeclarationError: (393-394): Undeclared identifier.
// DeclarationError: (404-405): Undeclared identifier.
// DeclarationError: (415-416): Undeclared identifier.
// DeclarationError: (426-427): Undeclared identifier.
// DeclarationError: (437-438): Undeclared identifier.
// DeclarationError: (448-449): Undeclared identifier.
// DeclarationError: (459-460): Undeclared identifier.
// DeclarationError: (470-471): Undeclared identifier.
// DeclarationError: (481-482): Undeclared identifier.
// DeclarationError: (492-493): Undeclared identifier.
// DeclarationError: (503-504): Undeclared identifier.
// DeclarationError: (514-515): Undeclared identifier.
// DeclarationError: (525-526): Undeclared identifier.
// DeclarationError: (536-537): Undeclared identifier.
// DeclarationError: (547-548): Undeclared identifier.
// DeclarationError: (558-559): Undeclared identifier.
// DeclarationError: (569-570): Undeclared identifier.
// DeclarationError: (580-581): Undeclared identifier.
// DeclarationError: (591-592): Undeclared identifier.
// DeclarationError: (602-603): Undeclared identifier.
// DeclarationError: (613-614): Undeclared identifier.
// DeclarationError: (624-625): Undeclared identifier.
// DeclarationError: (635-636): Undeclared identifier.
// DeclarationError: (646-647): Undeclared identifier.
// DeclarationError: (657-658): Undeclared identifier.
// DeclarationError: (668-669): Undeclared identifier.
// DeclarationError: (679-680): Undeclared identifier.
// DeclarationError: (690-691): Undeclared identifier.
// DeclarationError: (701-702): Undeclared identifier.
// DeclarationError: (712-713): Undeclared identifier.
// DeclarationError: (723-724): Undeclared identifier.
// DeclarationError: (734-735): Undeclared identifier.
// DeclarationError: (745-746): Undeclared identifier.
// DeclarationError: (756-757): Undeclared identifier.
// DeclarationError: (767-768): Undeclared identifier.
// DeclarationError: (778-779): Undeclared identifier.
// DeclarationError: (789-790): Undeclared identifier.
// DeclarationError: (800-801): Undeclared identifier.
// DeclarationError: (811-812): Undeclared identifier.
// DeclarationError: (822-823): Undeclared identifier.
// DeclarationError: (833-834): Undeclared identifier.
// DeclarationError: (844-845): Undeclared identifier.
// DeclarationError: (855-856): Undeclared identifier.
// DeclarationError: (866-867): Undeclared identifier.
// DeclarationError: (877-878): Undeclared identifier.
// DeclarationError: (888-889): Undeclared identifier.
// DeclarationError: (899-900): Undeclared identifier.
// DeclarationError: (910-911): Undeclared identifier.
// DeclarationError: (921-922): Undeclared identifier.
// DeclarationError: (932-933): Undeclared identifier.
// DeclarationError: (943-944): Undeclared identifier.
// DeclarationError: (954-955): Undeclared identifier.
// DeclarationError: (965-966): Undeclared identifier.
// DeclarationError: (976-977): Undeclared identifier.
// DeclarationError: (987-988): Undeclared identifier.
// DeclarationError: (998-999): Undeclared identifier.
// DeclarationError: (1009-1010): Undeclared identifier.
// DeclarationError: (1020-1021): Undeclared identifier.
// DeclarationError: (1031-1032): Undeclared identifier.
// DeclarationError: (1042-1043): Undeclared identifier.
// DeclarationError: (1053-1054): Undeclared identifier.
// DeclarationError: (1064-1065): Undeclared identifier.
// DeclarationError: (1075-1076): Undeclared identifier.
// DeclarationError: (1086-1087): Undeclared identifier.
// DeclarationError: (1097-1098): Undeclared identifier.
// DeclarationError: (1108-1109): Undeclared identifier.
// DeclarationError: (1119-1120): Undeclared identifier.
// DeclarationError: (1130-1131): Undeclared identifier.
// DeclarationError: (1141-1142): Undeclared identifier.
// DeclarationError: (1152-1153): Undeclared identifier.
// DeclarationError: (1163-1164): Undeclared identifier.
// DeclarationError: (1174-1175): Undeclared identifier.
// DeclarationError: (1185-1186): Undeclared identifier.
// DeclarationError: (1196-1197): Undeclared identifier.
// DeclarationError: (1207-1208): Undeclared identifier.
// DeclarationError: (1218-1219): Undeclared identifier.
// DeclarationError: (1229-1230): Undeclared identifier.
// DeclarationError: (1240-1241): Undeclared identifier.
// DeclarationError: (1251-1252): Undeclared identifier.
// DeclarationError: (1262-1263): Undeclared identifier.
// DeclarationError: (1273-1274): Undeclared identifier.
// DeclarationError: (1284-1285): Undeclared identifier.
// DeclarationError: (1295-1296): Undeclared identifier.
// DeclarationError: (1306-1307): Undeclared identifier.
// DeclarationError: (1317-1318): Undeclared identifier.
// DeclarationError: (1328-1329): Undeclared identifier.
// DeclarationError: (1339-1340): Undeclared identifier.
// DeclarationError: (1350-1351): Undeclared identifier.
// DeclarationError: (1361-1362): Undeclared identifier.
// DeclarationError: (1372-1373): Undeclared identifier.
// DeclarationError: (1383-1384): Undeclared identifier.
// DeclarationError: (1394-1395): Undeclared identifier.
// DeclarationError: (1405-1406): Undeclared identifier.
// DeclarationError: (1416-1417): Undeclared identifier.
// DeclarationError: (1427-1428): Undeclared identifier.
// DeclarationError: (1438-1439): Undeclared identifier.
// DeclarationError: (1449-1450): Undeclared identifier.
// DeclarationError: (1460-1461): Undeclared identifier.
// DeclarationError: (1471-1472): Undeclared identifier.
// DeclarationError: (1482-1483): Undeclared identifier.
// DeclarationError: (1493-1494): Undeclared identifier.
// DeclarationError: (1504-1505): Undeclared identifier.
// DeclarationError: (1515-1516): Undeclared identifier.
// DeclarationError: (1526-1527): Undeclared identifier.
// DeclarationError: (1537-1538): Undeclared identifier.
// DeclarationError: (1548-1549): Undeclared identifier.
// DeclarationError: (1559-1560): Undeclared identifier.
// DeclarationError: (1570-1571): Undeclared identifier.
// DeclarationError: (1581-1582): Undeclared identifier.
// DeclarationError: (1592-1593): Undeclared identifier.
// DeclarationError: (1603-1604): Undeclared identifier.
// DeclarationError: (1614-1615): Undeclared identifier.
// DeclarationError: (1625-1626): Undeclared identifier.
// DeclarationError: (1636-1637): Undeclared identifier.
// DeclarationError: (1647-1648): Undeclared identifier.
// DeclarationError: (1658-1659): Undeclared identifier.
// DeclarationError: (1669-1670): Undeclared identifier.
// DeclarationError: (1680-1681): Undeclared identifier.
// DeclarationError: (1691-1692): Undeclared identifier.
// DeclarationError: (1702-1703): Undeclared identifier.
// DeclarationError: (1713-1714): Undeclared identifier.
// DeclarationError: (1724-1725): Undeclared identifier.
// DeclarationError: (1735-1736): Undeclared identifier.
// DeclarationError: (1746-1747): Undeclared identifier.
// DeclarationError: (1757-1758): Undeclared identifier.
// DeclarationError: (1768-1769): Undeclared identifier.
// DeclarationError: (1779-1780): Undeclared identifier.
// DeclarationError: (1790-1791): Undeclared identifier.
// DeclarationError: (1801-1802): Undeclared identifier.
// DeclarationError: (1812-1813): Undeclared identifier.
// DeclarationError: (1823-1824): Undeclared identifier.
// DeclarationError: (1834-1835): Undeclared identifier.
// DeclarationError: (1845-1846): Undeclared identifier.
// DeclarationError: (1856-1857): Undeclared identifier.
// DeclarationError: (1867-1868): Undeclared identifier.
// DeclarationError: (1878-1879): Undeclared identifier.
// DeclarationError: (1889-1890): Undeclared identifier.
// DeclarationError: (1900-1901): Undeclared identifier.
// DeclarationError: (1911-1912): Undeclared identifier.
// DeclarationError: (1922-1923): Undeclared identifier.
// DeclarationError: (1933-1934): Undeclared identifier.
// DeclarationError: (1944-1945): Undeclared identifier.
// DeclarationError: (1955-1956): Undeclared identifier.
// DeclarationError: (1966-1967): Undeclared identifier.
// DeclarationError: (1977-1978): Undeclared identifier.
// DeclarationError: (1988-1989): Undeclared identifier.
// DeclarationError: (1999-2000): Undeclared identifier.
// DeclarationError: (2010-2011): Undeclared identifier.
// DeclarationError: (2021-2022): Undeclared identifier.
// DeclarationError: (2032-2033): Undeclared identifier.
// DeclarationError: (2043-2044): Undeclared identifier.
// DeclarationError: (2054-2055): Undeclared identifier.
// DeclarationError: (2065-2066): Undeclared identifier.
// DeclarationError: (2076-2077): Undeclared identifier.
// DeclarationError: (2087-2088): Undeclared identifier.
// DeclarationError: (2098-2099): Undeclared identifier.
// DeclarationError: (2109-2110): Undeclared identifier.
// DeclarationError: (2120-2121): Undeclared identifier.
// DeclarationError: (2131-2132): Undeclared identifier.
// DeclarationError: (2142-2143): Undeclared identifier.
// DeclarationError: (2153-2154): Undeclared identifier.
// DeclarationError: (2164-2165): Undeclared identifier.
// DeclarationError: (2175-2176): Undeclared identifier.
// DeclarationError: (2186-2187): Undeclared identifier.
// DeclarationError: (2197-2198): Undeclared identifier.
// DeclarationError: (2208-2209): Undeclared identifier.
// DeclarationError: (2219-2220): Undeclared identifier.
// DeclarationError: (2230-2231): Undeclared identifier.
// DeclarationError: (2241-2242): Undeclared identifier.
// DeclarationError: (2252-2253): Undeclared identifier.
// DeclarationError: (2263-2264): Undeclared identifier.
// DeclarationError: (2274-2275): Undeclared identifier.
// DeclarationError: (2285-2286): Undeclared identifier.
// DeclarationError: (2296-2297): Undeclared identifier.
// DeclarationError: (2307-2308): Undeclared identifier.
// DeclarationError: (2318-2319): Undeclared identifier.
// DeclarationError: (2329-2330): Undeclared identifier.
// DeclarationError: (2340-2341): Undeclared identifier.
// DeclarationError: (2351-2352): Undeclared identifier.
// DeclarationError: (2362-2363): Undeclared identifier.
// DeclarationError: (2373-2374): Undeclared identifier.
// DeclarationError: (2384-2385): Undeclared identifier.
// DeclarationError: (2395-2396): Undeclared identifier.
// DeclarationError: (2406-2407): Undeclared identifier.
// DeclarationError: (2417-2418): Undeclared identifier.
// DeclarationError: (2428-2429): Undeclared identifier.
// DeclarationError: (2439-2440): Undeclared identifier.
// DeclarationError: (2450-2451): Undeclared identifier.
// DeclarationError: (2461-2462): Undeclared identifier.
// DeclarationError: (2472-2473): Undeclared identifier.
// DeclarationError: (2483-2484): Undeclared identifier.
// DeclarationError: (2494-2495): Undeclared identifier.
// DeclarationError: (2505-2506): Undeclared identifier.
// DeclarationError: (2516-2517): Undeclared identifier.
// DeclarationError: (2527-2528): Undeclared identifier.
// DeclarationError: (2538-2539): Undeclared identifier.
// DeclarationError: (2549-2550): Undeclared identifier.
// DeclarationError: (2560-2561): Undeclared identifier.
// DeclarationError: (2571-2572): Undeclared identifier.
// DeclarationError: (2582-2583): Undeclared identifier.
// DeclarationError: (2593-2594): Undeclared identifier.
// DeclarationError: (2604-2605): Undeclared identifier.
// DeclarationError: (2615-2616): Undeclared identifier.
// DeclarationError: (2626-2627): Undeclared identifier.
// DeclarationError: (2637-2638): Undeclared identifier.
// DeclarationError: (2648-2649): Undeclared identifier.
// DeclarationError: (2659-2660): Undeclared identifier.
// DeclarationError: (2670-2671): Undeclared identifier.
// DeclarationError: (2681-2682): Undeclared identifier.
// DeclarationError: (2692-2693): Undeclared identifier.
// DeclarationError: (2703-2704): Undeclared identifier.
// DeclarationError: (2714-2715): Undeclared identifier.
// DeclarationError: (2725-2726): Undeclared identifier.
// DeclarationError: (2736-2737): Undeclared identifier.
// DeclarationError: (2747-2748): Undeclared identifier.
// DeclarationError: (2758-2759): Undeclared identifier.
// DeclarationError: (2769-2770): Undeclared identifier.
// DeclarationError: (2780-2781): Undeclared identifier.
// DeclarationError: (2791-2792): Undeclared identifier.
// DeclarationError: (2802-2803): Undeclared identifier.
// DeclarationError: (2813-2814): Undeclared identifier.
// DeclarationError: (2824-2825): Undeclared identifier.
// DeclarationError: (2835-2836): Undeclared identifier.
// DeclarationError: (2846-2847): Undeclared identifier.
// Warning: There are more than 256 errors. Aborting.
